# sfarkxtc-windows

./: README.md  sfArkLib.h  sfarkxtc.cpp  wcc.h
src/: .gitignore  Makefile  build_duma.md  sfarkxtc.cpp  sfklCoding.cpp  sfklCrunch.cpp  sfklFile.cpp  sfklLPC.cpp  sfklString.cpp  sfklZip.cpp  sfpack_notes.md  wcc.h
src/test/: pyproject.toml  test_sfarkxtc.py
src/test/originals/: 01mustheory2.txt  02TimGM6mb.txt
src/test/sfarks/: alicense.txt
src/test/sfarks/lvl4/: 02TimGM6mb.sfArk
